objects/Vertex_Details_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Vertex_Details__c</externalName>
    <fields>
        <fullName>B2B_Cart_Item_Id_c__c</fullName>
        <externalDeveloperName>B2B_Cart_Item_Id__c</externalDeveloperName>
        <label>B2B Cart Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Cart_c__c</fullName>
        <externalDeveloperName>B2B_Cart__c</externalDeveloperName>
        <label>B2B Cart</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_City_Tax_Rate_c__c</fullName>
        <externalDeveloperName>B2B_City_Tax_Rate__c</externalDeveloperName>
        <label>B2B City Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B2B_City_Tax_c__c</fullName>
        <externalDeveloperName>B2B_City_Tax__c</externalDeveloperName>
        <label>B2B City Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_State_Tax_Rate_c__c</fullName>
        <externalDeveloperName>B2B_State_Tax_Rate__c</externalDeveloperName>
        <label>B2B State Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B2B_State_Tax_c__c</fullName>
        <externalDeveloperName>B2B_State_Tax__c</externalDeveloperName>
        <label>B2B State Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_Total_Tax_c__c</fullName>
        <externalDeveloperName>B2B_Total_Tax__c</externalDeveloperName>
        <label>B2B Total Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_Transit_District_Tax_Rate_c__c</fullName>
        <externalDeveloperName>B2B_Transit_District_Tax_Rate__c</externalDeveloperName>
        <label>B2B Transit District Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B2B_Transit_District_Tax_c__c</fullName>
        <externalDeveloperName>B2B_Transit_District_Tax__c</externalDeveloperName>
        <label>B2B Transit District Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_c__c</fullName>
        <externalDeveloperName>Customer__c</externalDeveloperName>
        <label>Customer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Vertex Name</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderItem_c__c</fullName>
        <externalDeveloperName>OrderItem__c</externalDeveloperName>
        <label>OrderItem</label>
        <length>18</length>
        <referenceTo>OrderItem__x</referenceTo>
        <relationshipName>Tax_Transactions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_Transaction_c__c</fullName>
        <externalDeveloperName>Order_Transaction__c</externalDeveloperName>
        <label>Order Transaction</label>
        <length>18</length>
        <referenceTo>Order_Transaction_c__x</referenceTo>
        <relationshipName>Tax_Transactions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_c__c</fullName>
        <externalDeveloperName>Order__c</externalDeveloperName>
        <label>Order</label>
        <length>18</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Tax_Transactions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Vertex_Details_c__c</fullName>
        <externalDeveloperName>Parent_Vertex_Details__c</externalDeveloperName>
        <label>Parent Tax Transaction</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tax_Transaction_Date_c__c</fullName>
        <externalDeveloperName>Tax_Transaction_Date__c</externalDeveloperName>
        <label>Tax Transaction Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>documentNumber_c__c</fullName>
        <externalDeveloperName>documentNumber__c</externalDeveloperName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tax Transaction</label>
    <pluralLabel>Tax Transactions</pluralLabel>
</CustomObject>